Bug 658741 - Backout of focus related changes in bug 648935 due to plugin hang issues. r=bsmedberg